Add estimatedTimeOfFull
